--- a/frontend/src/styles/components/_stakes-table.scss
+++ b/frontend/src/styles/components/_stakes-table.scss
@@ -23,7 +23,7 @@
         letter-spacing: 1.5px;
     }
     .staked-prct{
-        float: right;
+        text-align: right;
     }
     .arrow-container{
         cursor: pointer;
