--- a/frontend/src/styles/components/_chart.scss
+++ b/frontend/src/styles/components/_chart.scss
@@ -1,9 +1,11 @@
 .chart{
+    position: relative;
     width: 50%;
     margin: 10px 25%;
     cursor: pointer;
     &.line{
-        width: 56%;
-        margin: 5px 22%
+        width: 80%;
+        height: 110px;
+        margin: 5px 10%;
     }
 }
