Add transaction icons

--- a/frontend/src/styles/components/_transaction-table.scss
+++ b/frontend/src/styles/components/_transaction-table.scss
@@ -29,9 +29,12 @@ table.data.txn-table {
   tr.transfer .type:before { background-image: url('/images/icons/icon_send@2x.png'); }
   tr.service-payment .type:before { background-image: url('/images/icons/icon_servicepayment@2x.png'); }
   tr.split-contract .type:before { background-image: url('/images/icons/icon_splitcontract@2x.png'); }
+  tr.smart-contract .type:before { background-image: url('/images/icons/icon_smartcontract@2x.png'); }
   tr.reserve .type:before { background-image: url('/images/icons/icon_reservefund@2x.png'); }
   tr.release .type:before { background-image: url('/images/icons/icon_releasefund@2x.png'); }
   tr.slash .type:before { background-image: url('/images/icons/icon_slash@2x.png'); }
+  tr.deposit-stake .type:before{ background-image: url('/images/icons/icon_deposit-stake-transaction@2x.png'); }
+  tr.withdraw-stake .type:before { background-image: url('/images/icons/icon_withdraw-stake-transaction@2x.png'); }
   tr.update-validators .type:before { background-image: url('/images/icons/icon_updatevalidators@2x.png'); }
 
   td.age {
