--- a/frontend/src/styles/components/_chart.scss
+++ b/frontend/src/styles/components/_chart.scss
@@ -8,4 +8,8 @@
         height: 110px;
         margin: 5px 5%;
     }
+    @include breakpoint('phablet', max) {
+        width: 130%;
+        margin: 10px 0 0 -15%;
+    }
 }
