Fix transaction table in block detail page

--- a/frontend/src/styles/sections/_blocks.scss
+++ b/frontend/src/styles/sections/_blocks.scss
@@ -46,6 +46,16 @@
       margin-right: 1rem;
     }
   }
-
+  @include breakpoint('phablet', max) {
+    .block-txn {
+      .txn-type{
+        &:before{ display: none }
+        font-size: 0.675rem;
+      }
+      .hash{
+        font-size: 0.675rem;
+      }
+    }
+  }
 
 }
