--- a/frontend/src/styles/components/_tabs.scss
+++ b/frontend/src/styles/components/_tabs.scss
@@ -15,5 +15,14 @@
       border-radius: 5px;
       border-color: $color-panel;
     }
+
+    &__tab-panel--selected{
+      .code-area{
+        width: 100%;
+        height: 350px;
+        color: $color-font-light;
+        resize: none;
+      }
+    }
   }
 }
