--- a/frontend/src/styles/components/_header.scss
+++ b/frontend/src/styles/components/_header.scss
@@ -146,7 +146,7 @@
       margin-right: 3%;
       flex: 0 0 6rem; 
     }
-    .nav-search { display: none; }
+    .nav-search { margin: 0.5rem auto 0; }
     .nav a.nav-item{
       letter-spacing: 0;
       margin-right: 1%;
