Add popup modal

--- a/frontend/src/styles/sections/_account.scss
+++ b/frontend/src/styles/sections/_account.scss
@@ -15,7 +15,60 @@
     @include row($justify: flex-end);
     border-top: 1px solid $color-font-light;
     padding-top: 2rem;
-
+    .popup-content{
+      width: 330px !important;
+      background-color: $color-black !important;
+      color: $color-font-light;
+      padding: 10px !important;
+      .popup-row{
+        display: flex;
+        margin-bottom: 10px;
+        &.header{
+          display: block;
+          color: $color-white;
+          font-weight: bold;
+        }
+        &.buttons{
+          display: flex;
+          justify-content: space-around;
+          .popup-reset{
+            width: 30%;
+            margin: 10px 0 0 0;
+            font-size: .875rem;
+            font-weight: $weight-semi;
+            color: $color-font-light;
+            cursor: pointer;
+            border: 1px solid $color-font-light;
+            text-align: center;
+            border-radius: 15px;
+          }
+          .popup-download{
+            width: 30%;
+            margin: 10px 0 0 0;
+            font-size: .875rem;
+            font-weight: $weight-semi;
+            color: $color-font-light;
+            cursor: pointer;
+            border: 1px solid $color-font-light;
+            text-align: center;
+            border-radius: 15px;
+          }
+        }
+      }
+      .popup-label{
+        width: 30%;
+        vertical-align: baseline;
+        margin: auto;
+      }
+      .popup-input{
+        width: 70%
+      }
+      .popup-arrow{
+        background-color: $color-black !important;
+        border-right: 1px solid $color-font-light;
+        border-bottom: 1px solid $color-font-light;
+      }
+    }
     .download{
       position: absolute;
       left: 0;
