--- a/frontend/src/styles/sections/_account.scss
+++ b/frontend/src/styles/sections/_account.scss
@@ -28,6 +28,13 @@
           color: $color-white;
           font-weight: bold;
         }
+        &.err-msg{
+          color: $color-red;
+          padding-left: 30%;
+          &.disable{
+            display: none;
+          }
+        }
         &.buttons{
           display: flex;
           justify-content: space-around;
