--- a/frontend/src/styles/sections/_account.scss
+++ b/frontend/src/styles/sections/_account.scss
@@ -60,6 +60,17 @@
             text-align: center;
             border-radius: 15px;
           }
+          .popup-downloading{
+            width: 40%;
+            margin: 10px 0 0 0;
+            font-size: .875rem;
+            font-weight: $weight-semi;
+            color: $color-font-light;
+            text-align: center;
+          }
+        }
+        .disable{
+          display: none;
         }
       }
       .popup-label{
