--- a/frontend/src/styles/components/_smart-contract.scss
+++ b/frontend/src/styles/components/_smart-contract.scss
@@ -1,9 +1,11 @@
-.version-select{
-  $self: &;
+.selects-container{
+  display: flex;
+  justify-content: space-between;
+}
+.select{
   &--container{
     display: flex;
     margin: 15px 0;
-
     & label{
       line-height: 32px;
     }
@@ -11,6 +13,9 @@
   &--selector{
     width: 12rem;
     margin: 0 5px;
+    &.optimizer{
+      width: 10rem;
+    }
     &::after {
       content: "";
       width: 0;
@@ -26,6 +31,40 @@
     & select{
       width: 100%;
       height: 32px;
+    }
+  }
+
+  &--tooltip{
+    $self: &;
+    margin: 0 5px;
+    color: $color-font-light;
+
+    &__text{
+      width: 250px;
+      visibility: hidden;
+      position: absolute;
+      z-index: 1;
+      background: $color-panel;
+      border-radius: 6px;
+      font-size: 0.875rem;
+      padding: 5px 10px;
+
+      bottom: calc(100% + 10px);
+      left: 50%;
+      margin-left: -125px;
+      &:after{
+        content: '';
+        position: absolute;
+        border-style: solid;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-color: $color-panel transparent transparent transparent;
+        border-width: 5px;
+      }
+    }
+    &:hover #{ $self }__text{
+        visibility: visible;
     }
   }
 }
