Revise verification logic

--- a/frontend/src/styles/components/_smart-contract.scss
+++ b/frontend/src/styles/components/_smart-contract.scss
@@ -1,3 +1,9 @@
+.code-loading-text{
+  position: absolute;
+  top: 10%;
+  width: 100%;
+  text-align: center;
+}
 .selects-container{
   display: flex;
   justify-content: space-between;
