--- a/frontend/src/styles/components/_smart-contract.scss
+++ b/frontend/src/styles/components/_smart-contract.scss
@@ -98,3 +98,40 @@
     }
   }
 }
+.contract-info{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  background-color: $color-panel;
+  &--title{
+    height: 40px;
+    line-height: 40px;
+    color: $color-green;
+  }
+  &--general{
+    display: flex;
+    flex-direction: row;
+  }
+  &--block{
+    width: 50%;
+    padding: 0 1rem 0 1rem;
+    &:first-child{
+      padding-right: 3rem;
+    }
+  }
+  &--cell{
+    display: flex;
+    height: 40px;
+    line-height: 40px;
+    &:first-child{
+      border-bottom: 1px solid $color-light;
+    }
+    & > div{
+      width: 50%;
+      &:nth-child(2){
+        color: $color-font-light;
+      }
+    }
+  }
+}
