--- a/frontend/src/styles/components/_smart-contract.scss
+++ b/frontend/src/styles/components/_smart-contract.scss
@@ -103,17 +103,23 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  color: $color-font-light;
   background-color: $color-panel;
   &--title{
     height: 40px;
     line-height: 40px;
-    color: $color-green;
+    margin: 20px 0;
+    font-weight: $weight-bold;
+    &.verified{
+      margin-top: 0;
+      color: $color-green;
+    }
   }
   &--general{
     display: flex;
     flex-direction: row;
   }
-  &--block{
+  &--raws{
     width: 50%;
     padding: 0 1rem 0 1rem;
     &:first-child{
@@ -133,5 +139,9 @@
         color: $color-font-light;
       }
     }
+  }
+  &--block{
+    margin: 10px 0;
+    width: 100%;
   }
 }
