Add UI input check

--- a/frontend/src/styles/components/_smart-contract.scss
+++ b/frontend/src/styles/components/_smart-contract.scss
@@ -37,6 +37,9 @@
     & select{
       width: 100%;
       height: 32px;
+      &.isEmpty{
+        border-color: $color-red;
+      }
     }
   }
 
