--- a/frontend/src/styles/modules/_fonts.scss
+++ b/frontend/src/styles/modules/_fonts.scss
@@ -20,6 +20,7 @@ $line-height: 1.4;
          url('../fonts/Rift-Bold.woff') format('woff');
     font-weight: $weight-bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -28,6 +29,7 @@ $line-height: 1.4;
          url('../fonts/Rift-Demi.woff') format('woff');
     font-weight: $weight-semi;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -36,6 +38,7 @@ $line-height: 1.4;
          url('../fonts/Rift-Medium.woff') format('woff');
     font-weight: $weight-medium;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -44,6 +47,7 @@ $line-height: 1.4;
          url('../fonts/Rift-Regular.woff') format('woff');
     font-weight: $weight-regular;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -52,6 +56,7 @@ $line-height: 1.4;
          url('../fonts/Rift-Light.woff') format('woff');
     font-weight: $weight-light;
     font-style: normal;
+    font-display: swap;
 }
 
 
@@ -64,6 +69,7 @@ $line-height: 1.4;
          url('../fonts/Alwyn-New-Bold.woff') format('woff');
     font-weight: $weight-bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -72,6 +78,7 @@ $line-height: 1.4;
          url('../fonts/Alwyn-New-Medium.woff') format('woff');
     font-weight: $weight-semi;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -80,6 +87,7 @@ $line-height: 1.4;
          url('../fonts/Alwyn-New-Medium.woff') format('woff');
     font-weight: $weight-medium;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -88,6 +96,7 @@ $line-height: 1.4;
          url('../fonts/Alwyn-New-Regular.woff') format('woff');
     font-weight: $weight-regular;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -96,6 +105,7 @@ $line-height: 1.4;
          url('../fonts/Alwyn-New-Light.woff') format('woff');
     font-weight: $weight-light;
     font-style: normal;
+    font-display: swap;
 }
 
 
