Read no parameter contracts

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -26,6 +26,7 @@
 @import 'components/stakes-table';
 @import 'components/chart';
 @import 'components/tabs';
+@import 'components/read-contract';
 @import 'components/smart-contract';
 
 // SECTIONS 
