Read contracts with paramemters

--- a/frontend/src/styles/components/_read-contract.scss
+++ b/frontend/src/styles/components/_read-contract.scss
@@ -15,9 +15,58 @@
   }
   &__output{
     display: flex;
+    &--content{
+      margin-right: 5px;
+    }
     &--unit{
       color: $color-font-light;
       font-style: italic;
+    }
+    &--response{
+      margin: 10px 0;
+      color: $color-font-light;
+    }
+  }
+  &__outputs-templates{
+    margin-top: 15px;
+  }
+  &__outputs-template{
+    margin-top: 5px;
+    color: $color-font-light;
+    font-style: italic;
+  }
+  &__inputs{
+    margin-top: -1rem;
+  }
+  &__input{
+    display: flex;
+    margin-top: 1rem;
+    label{
+      line-height: 34px;
+      margin-right: 1rem;
+    }
+    input{
+      border-radius: 6px;
+      background-color: transparent;
+      border: 1px solid $color-input-background;
+      width: 100%;
+    }
+    & .error{
+      border-color: $color-red;
+    }
+    &--row{
+      display: flex;
+    }
+    &--query{
+      height: 2rem;
+      width: 5rem;
+      margin: 5px 0;
+      background-color: $color-input-background;
+      border-color: $color-input-background;
+      color: $color-white;
+      &:focus{
+        outline: none;
+      }
     }
   }
 }
