--- a/frontend/src/styles/partials/_utils.scss
+++ b/frontend/src/styles/partials/_utils.scss
@@ -12,7 +12,9 @@
 .text-danger{
   color: $color-red;
 }
-
+.text-green{
+  color: $color-green;
+}
 .text-disabled{
   color: $color-font-light;
   cursor: not-allowed;
