Remove manually check, use web3 lib instead

--- a/frontend/src/styles/components/_read-contract.scss
+++ b/frontend/src/styles/components/_read-contract.scss
@@ -51,6 +51,9 @@
       border: 1px solid $color-input-background;
       width: 100%;
     }
+    &--error{
+      margin: 0 15px;
+    }
     & .error{
       border-color: $color-red;
     }
