Display NFT items in transaction page

--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -132,3 +132,12 @@
     }
   }
 }
+
+.sc-item {
+  &__image {
+    max-width: 250px;
+    @include breakpoint('tablet', max) {
+      width: 100%;
+    }
+  }
+}
