Add item row in overview tab

--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -132,8 +132,12 @@
     }
   }
 }
-
+.sc-items {
+  display: flex;
+  flex-flow: row wrap;
+}
 .sc-item {
+  margin-right: 10px;
   &__image {
     max-width: 250px;
     @include breakpoint('tablet', max) {
