--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -9,7 +9,10 @@
 
   .details-header {
     @include row($justify: space-between, $align: flex-end);
-    padding: 3rem 1rem .75rem;
+    padding: 3rem 1rem .75rem 0;
+    &.item {
+      padding-top: 0;
+    }
     .txn-type {
       font-family: $font-title;
       font-weight: $weight-bold;
@@ -92,6 +95,8 @@
 .txn-type.deposit-stake:before { background-image: url('/images/icons/icon_deposit-stake-transaction@2x.png'); }
 .txn-type.withdraw-stake:before { background-image: url('/images/icons/icon_withdraw-stake-transaction@2x.png'); }
 
+.txn-type.items:before { background-image: url('/images/icons/icon_items@2x.png'); }
+
 .txn-type.update-validators:before { background-image: url('/images/icons/icon_updatevalidators@2x.png'); }
 
 .sc-log {
@@ -137,16 +142,37 @@
   flex-flow: row wrap;
 }
 .sc-item {
+  background-color: rgba($color-font-light, 0.2);
+  border-radius: 5px;
+  margin: 17px;
+  padding: 25px;
+  max-width: 42%;
+  min-width: 460px;
+  display: flex;
   margin-right: 10px;
+  &__column {
+    &:first-child {
+      margin-right: 28px;
+    }
+  }
   &__row {
     &:last-child {
       margin-top: 5px;
     }
   }
   &__image {
-    max-width: 250px;
+    max-width: 140px;
     @include breakpoint('tablet', max) {
       width: 100%;
+    }
+  }
+  &__text {
+    color: $color-font-light;
+    display: flex;
+    flex-wrap: wrap;
+    &.name {
+      margin-bottom: 8px;
+      color: $color-white
     }
   }
 }
