--- a/frontend/src/styles/sections/_home.scss
+++ b/frontend/src/styles/sections/_home.scss
@@ -33,6 +33,7 @@
     .more{
       margin-top: 27px;
       font-size: 14px;
+      font-weight: bold;
       letter-spacing: 1.4px;
       color: $color-theta-blue-light;
     }
