--- a/frontend/src/styles/components/_chart.scss
+++ b/frontend/src/styles/components/_chart.scss
@@ -9,7 +9,7 @@
         margin: 5px 5%;
     }
     @include breakpoint('phablet', max) {
-        width: 130%;
-        margin: 10px 0 0 -15%;
+        width: 130% !important;
+        margin: 10px 0 0 -15% !important;
     }
 }
