--- a/frontend/src/styles/sections/_transactions.scss
+++ b/frontend/src/styles/sections/_transactions.scss
@@ -98,6 +98,7 @@
 .txn-type.slash:before { background-image: url('/images/icons/icon_slash@2x.png'); }
 .txn-type.deposit-stake:before { background-image: url('/images/icons/icon_deposit-stake-transaction@2x.png'); }
 .txn-type.withdraw-stake:before { background-image: url('/images/icons/icon_withdraw-stake-transaction@2x.png'); }
+.txn-type.stake-reward-distribution:before { background-image: url('/images/icons/icon_distribute-stake@2x.png'); }
 
 .txn-type.items:before { background-image: url('/images/icons/icon_items@2x.png'); }
 
