Add elite edge node icon

--- a/frontend/src/styles/components/_stakes-table.scss
+++ b/frontend/src/styles/components/_stakes-table.scss
@@ -109,3 +109,4 @@
     
 .node-type.vcp:before { background-image: url('/images/icons/icon_validator-node@2x.png'); }
 .node-type.gcp:before { background-image: url('/images/icons/icon_guardian-node@2x.png'); }
+.node-type.eenp:before { background-image: url('/images/icons/icon_elite-edge-node@2x.png'); }
